# particles

./: .gitignore  AGENTS.md  Cargo.toml  encode.sh  play.sh
src/: assignment.rs  bitmap.rs  circle_rasterizer.rs  cloud.rs  color.rs  cubic_hermite3.rs  depth_field.rs  distribution.rs  env.rs  eq.rs  field.rs  fluid.rs  gerstner.rs  glitter.rs  glitter_scene.rs  glow.rs  lerp.rs  lib.rs  point_cloud.rs  projection.rs  render.rs  render2.rs  resolution.rs  rng.rs  simplex.rs  timeline.rs  tinycolor.rs
src/distribution/: add.rs  constant.rs  cube.rs  distribution3.rs  gaussian.rs  grid3d.rs  gyroid.rs  icosahedron.rs  lissajous.rs  mod.rs  sphere.rs  tetrahedron.rs  torus_surface.rs  uniform3.rs  uniform_cube.rs
