[package]
name = "particles"
version = "0.1.0"
edition = "2021"
default-run = "main"

[dependencies]
glam = "0.32.1"

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.33.0", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
eframe = { version = "0.33.0", default-features = false, features = ["default_fonts", "glow"] }
